# Digraphs

./: .appveyor.yml  .codecov.yml  .codespellrc  .comments  .covignore  .gaplint.yml  .gaplint_ignore  .gitignore  .hgignore  .hgtags  .mailmap  .release  .travis.yml  CHANGELOG.html  CHANGELOG.md  COPYING  Dockerfile  IsCograph.g  LICENSE  Makefile.am  Makefile.gappkg  Makefile.in  PackageInfo.g  README  README.html  README.md  VERSIONS  _README  _TODO  _config.yml  autogen.sh  azure-pipelines.yml  bipartite.g  code-coverage-test.py  configure.ac  configure~  digraph.dot  doc-index.md  environment.yml  flake.nix  (+18 more)
.github/actions/test_with_valgrind/: action.yml
.github/workflows/: GAP.yml  ci.yml  codespell.yml  config_options.yml  core.yml  gap.yml  lint.yml  manual.yml  os.yml  release.yml  stale.yml  ubuntu.yml  valgrind.yml
_data/: package.yml
_includes/: button-bibtex.html
_layouts/: default.html
ci/: azure-gap.sh  coverage.py  docker-test.sh
data/: colors.p  graph5.g6  named-digraphs-main-database.g  named-digraphs-test-database.g  test-1.d6  tourn4.txt  tree9.4.txt
digraphs-dev/: release-checklist.tst
doc/: attr.xml  attrs.xml  bliss.xml  chap0.html  chap0.txt  chap0_mj.html  chap1.html  chap1.txt  chap1.xml  chap1_mj.html  chap2.html  chap2.txt  chap2_mj.html  chap3.html  chap3.txt  chap3_mj.html  chap4.html  chap4.txt  chap4_mj.html  chap5.html  chap5.txt  chap5_mj.html  chap6.html  chap6.txt  chap6_mj.html  chap7.html  chap7.txt  chap7_mj.html  chap8.html  chap8.txt  chap8_mj.html  chap9.html  chap9.txt  chap9_mj.html  chapA.html  chapA.txt  chapA_mj.html  chapB.html  chapB.txt  chapB_mj.html  (+48 more)
etc/: code-coverage-test-c.py  code-coverage-test-gap.py  cpplint.sh  find_not_included_man_sections.py  gaplint.sh  lint.sh  tst-local-vars.py  tst-unbind-local-vars.py
gap/: .null-ls_141605_display.gi  .oper.gi.swn  8.2-163_2  attr.gd  attr.gi  attrs.gd  attrs.gi  bliss.gd  bliss.gi  cliques.gd  cliques.gi  cnstr.gd  cnstr.gi  cographs-TODO.md  constructors.gd  constructors.gi  crossing-number.gd  crossing-number.gi  deprecated.gd  deprecated.gi  digraph.gd  digraph.gi  digraphs.g  display.gd  display.gi  doc.g  examples.gd  examples.gi  exmpl.gd  exmpl.gi  grahom.gd  grahom.gi  grape.gd  grape.gi  graph.gi  io.gd  io.gi  isomorph.gd  isomorph.gi  jamesgap  (+24 more)
m4/: ac_find_gap.m4  ax_check_bliss.m4  ax_check_planarity.m4  find_gap.m4
notebooks/: demo.ipynb
scripts/: check-code-coverage.sh  code-coverage-test.py  codeship.sh  dots.py  release.py  test.py  travis-build-dependencies.sh  travis-build-digraphs.sh  travis-build.sh  travis-coverage.py  travis-test.sh
src/: CPPLINT.cfg  bitarray.c  bitarray.h  bliss-includes.h  cliques.c  cliques.h  conditions.c  conditions.h  dfs.c  dfs.h  dfs_pre.c  digraphs-debug.h  digraphs.c  digraphs.h  gap-debug.h  gap-includes.h  gap_all.h  globals.h  grahom.c  graphs.c  graphs.h  homos-graphs.c  homos-graphs.h  homos.c  homos.h  perms.c  perms.h  pkgconfig.h.in~  planar.c  planar.h  safemalloc.c  safemalloc.h  schreier-sims.c  schreier-sims.h
src/bliss-0.72/: bliss_C.cc  graph.cc  graph.hh
src/bliss-0.72/.deps/: digraphs_la-bliss_C.Plo  digraphs_la-defs.Plo  digraphs_la-graph.Plo  digraphs_la-heap.Plo  digraphs_la-orbit.Plo  digraphs_la-partition.Plo  digraphs_la-timer.Plo  digraphs_la-uintseqhash.Plo  digraphs_la-utils.Plo
src/bliss-0.73/: graph.cc  graph.hh  partition.cc  partition.hh
src/edge-addition-planarity-suite-Version_3.0.0.5/: configure.ac  planarity.1
src/edge-addition-planarity-suite-Version_3.0.0.5/c/: .cproject  .project  planarity.c  planarity.h
stylesheets/: styles.css
tst/: attr.tst  attrs.tst  bliss.tst  digraph.tst  display.tst  grahom.tst  homos.tst  io.tst  oper.tst  opers.tst  prop.tst  testall.g  testinstall.tst  teststandard.g  util.tst  utils.tst
tst/extreme/: attr.tst  bliss.tst  cliques.tst  grahom.tst  homos.tst  isomorph.tst  named.tst  oper.tst
tst/github_actions/: examples.g  extreme.g  install.g  standard.g
tst/standard/: attr.tst  bliss.tst  broken1.tst  broken2.tst  cliques.tst  cnstr.tst  constructors.tst  crossingnumber.tst  digraph.tst  display.tst  examples.tst  exmpl.tst  grahom.tst  grape.tst  homos.tst  io.tst  isomorph.tst  labels.tst  named.tst  obsolete.tst  oper.tst  orbits.tst  planar.tst  prop.tst  utils.tst  weights.tst
tst/workspaces/: load-workspace.tst  save-workspace.tst
